assets/css/layout.css
/* ... */
.sponsors .sponsor {
	display: inline-block;
	box-sizing: border-box;
	padding: 10px;
	text-align: center;
}

.sponsors .main.sponsor {
	width: 50%;
}

.sponsors .regular.sponsor {
	width: 25%;
}

.sponsors .small.sponsor {
	width: 17.5%;
}

.sponsors .sponsor img {
	width: 100%;
}

@media (min-width: 700px) {
	.sponsors .sponsor {
		padding: 20px;
	}
}

/* Talks */

.program > section {
	margin-bottom: 3em;
	padding-bottom: 2em;
	box-shadow: 0 5px 10px -12px #000; /* subtiel lijntje */
}

.program > section:last-child {
	box-shadow: none;
	margin-bottom: 0;
}

.talks {
	list-style: none;
	padding: 0;
}

.talk {
	position: relative;
	margin-bottom: 3em;
}

.talk .speaker {
	margin-bottom: 1em;
}

.talk .speaker .photo {
	height: 150px;
	vertical-align: middle;
	margin: 0 auto;
}

@media (min-width: 700px) {
	.talk {
		padding-left: calc(220px + 1em);
	}

	.talk .speaker {
		position: absolute;
		top: 2.5em;
		left: 0;
		max-width: 220px;
	}

	.talk .speaker > * {
		display: block;
		text-align: center;
	}
}

/* Accepted papers */

.accepted-papers h3 {
	margin: 0.5em 0;
}

.accepted-papers ul {
	list-style: none;
	padding: 0;
	margin: 0.5em 0;
}

.accepted-papers li {
	margin-bottom: 0.5em;
}

.accepted-papers .author {
	font-style: italic;
	display: block;
}

/* Jump-list at the top of the accepted papers section */

.table-of-contents {
	display: flex;
	list-style: none;
	padding: 0;
	justify-content: space-between;
}

.table-of-contents li {
	flex: 1 1 auto;
	line-height: 2em;
}

